# eldc

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  demo_eldc_lib.cs  demo_eldc_lib.go  demo_eldc_lib.java  demo_eldc_lib.php  demo_eldc_lib.py  demo_eldc_lib.rb  demo_eldc_lib.rs  demo_eldc_lib.ts  demo_eldc_package.py  pyproject.toml  setup.py
.github/workflows/: release.yaml
benchmark/: bench.py  bench_library.php  bench_package.py  bench_results.txt  sentences_v3.languages.txt  single_words_v3.languages.txt  single_words_v3.txt  tatoeba_50_v3.languages.txt  word_pairs_v3.languages.txt
benchmark/text_files/: eld_test.languages.txt  word_pairs_v3.txt
examples/: demo_eldc_lib.cs  demo_eldc_lib.go  demo_eldc_lib.java  demo_eldc_lib.php  demo_eldc_lib.py  demo_eldc_lib.rb  demo_eldc_lib.rs  demo_eldc_lib.ts  demo_eldc_package.py
src/eldc/: __init__.py  _eldc_module.c  eld.c  eld_cli_utils.c  eld_core.c  eld_iso639_2t.h  eld_mt.c  eld_tolower.h  eld_unicode.h  eld_unicode_bits.h  eldc_lib.c  eldc_lib.h
test/: test_eldc_lib.py  test_eldc_package.py
